platform/kyverno/policies/disallow-privileged.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy

metadata:
  name: disallow-privileged

spec:
  validationFailureAction: Enforce

  rules:
    - name: block-privileged

      match:
        any:
          - resources:
              kinds:
                - Pod

      exclude:
        any:
        - resources:
            namespaces:
            - kube-system
            - argocd
            - monitoring
            - jenkins
            - sonarqube
            - vault
            - velero
            - external-secrets
            - karpenter
            - loki
            - kyverno

      validate:
        message: "privileged containers not allowed"

        pattern:
          spec:
            containers:
              - securityContext:
                  privileged: false
