platform/kyverno/policies/require-limits.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy

metadata:
  name: require-resource-limits

spec:
  validationFailureAction: Enforce
  background: true

  rules:
    - name: require-limits

      match:
        any:
        - resources:
            kinds:
            - Pod

      exclude:
        any:
        - resources:
            namespaces:
            - kube-system
            - argocd
            - monitoring
            - jenkins
            - sonarqube
            - vault
            - velero
            - external-secrets
            - karpenter
            - loki
            - kyverno

      validate:
        message: "CPU and memory limits are required"

        pattern:
          spec:
            containers:
            - resources:
                limits:
                  cpu: "?*"
                  memory: "?*"
