platform/kyverno/policies/require-probes.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy

metadata:
  name: require-probes

spec:
  validationFailureAction: Enforce

  background: true

  rules:
    - name: require-readiness-liveness

      match:
        any:
        - resources:
            kinds:
            - Pod

      exclude:
        any:
        - resources:
            namespaces:
            - kube-system
            - argocd
            - monitoring
            - jenkins
            - sonarqube
            - vault
            - velero
            - external-secrets
            - karpenter
            - loki
            - kyverno
      
      validate:
        message: "readiness and liveness probes required"

        pattern:
          spec:
            containers:
            - readinessProbe:
                httpGet:
                  path: "?*"
                  port: "?*"

              livenessProbe:
                httpGet:
                  path: "?*"
                  port: "?*"
